--- a/style.css
+++ b/style.css
@@ -4,6 +4,7 @@
 * {
   margin: 0;
   padding: 0;
+  font-family: 'Nunito';
 }
 
 body {
@@ -17,8 +18,8 @@ body {
 .content {
   display: flex;
   justify-content: center;
-  width: 375px;
-  height: 812px;
+  /* width: 375px; */
+  min-height: 100vh;
   margin:0 auto;
   background-color:#e2e8ee;
 }
